Add testing infrastructure and enhance ColumnBuilder functionality
- Introduced `vitest` as the testing framework and added initial tests for `ColumnBuilder`.
- Added type definitions and validation with `@types/node` and `expect-type`.
- Implemented the `LooseColDef` type along with the `normalizeColDef` utility method to standardize column definitions.
- Updated `ColumnBuilderImpl` to support normalized column definitions.
- Configured `vitest` with a custom configuration file.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "ag-colbuilder",
   "module": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^24.10.1",
+    "expect-type": "^1.2.2",
+    "vitest": "^4.0.14"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
