Add MIT license and update package metadata

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ag-colbuilder",
   "module": "src/index.ts",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "test": "vitest run",
