--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "ag-colbuilder",
+  "version": "0.1.0",
   "module": "src/index.ts",
   "license": "MIT",
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "bun x biome check"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.8",
     "@types/bun": "latest",
     "@types/node": "^24.10.1",
     "expect-type": "^1.2.2",
