--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "ag-colbuilder",
   "version": "0.1.0",
-  "module": "src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
   "type": "module",
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
-    "lint": "bun x biome check"
+    "lint": "bun x biome check",
+    "build": "tsc -p tsconfig.json",
+    "clean": "rm -rf dist",
+    "prepare": "bun run build"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
