--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "ag-colbuilder",
   "version": "0.1.0",
+  "description": "A fluent, strongly typed column definition builder for AG Grid.",
+  "license": "MIT",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "license": "MIT",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "sideEffects": false,
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
@@ -14,14 +27,20 @@
     "clean": "rm -rf dist",
     "prepare": "bun run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ethanhann/ag-colbuilder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ethanhann/ag-colbuilder/issues"
+  },
+  "homepage": "https://github.com/ethanhann/ag-colbuilder#readme",
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
     "@types/bun": "latest",
     "@types/node": "^24.10.1",
     "expect-type": "^1.2.2",
-    "vitest": "^4.0.14"
-  },
-  "peerDependencies": {
+    "vitest": "^4.0.14",
     "typescript": "^5.9.3"
   },
   "dependencies": {
