--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "vitest": "^4.0.14",
     "typescript": "^5.9.3"
   },
-  "dependencies": {
-    "ag-grid-community": "^34.3.1"
+  "peerDependencies": {
+    "ag-grid-community": ">=34.0.0",
   }
 }
