--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "sideEffects": false,
   "scripts": {
     "test": "vitest run",
+    "coverage": "vitest run --coverage",
     "test:watch": "vitest",
     "lint": "bun x biome check",
     "format": "bun x biome format --write",
@@ -39,9 +40,10 @@
     "@biomejs/biome": "2.3.8",
     "@types/bun": "latest",
     "@types/node": "^24.10.1",
+    "@vitest/coverage-v8": "4.0.14",
     "expect-type": "^1.2.2",
-    "vitest": "^4.0.14",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.14"
   },
   "peerDependencies": {
     "ag-grid-community": ">=34.0.0"
